Switch to using gettext translations for start page and website.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,2 +1,6 @@
 [jinja2: website/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
+
+[jinja2: start-page/release/index.html]
+extensions=jinja2.ext.autoescape,jinja2.ext.with_
+
