Update and simplify l10n extraction to do everything in one script.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,6 +1,6 @@
+[ignore: website/calendar/**.html]
+[ignore: website/email-providers/index.html]
+[ignore: website/organizations/index.html]
 [jinja2: website/**.html]
-extensions=jinja2.ext.autoescape,jinja2.ext.with_
-
 [jinja2: start-page/release/index.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
-
