Exclude Get Involved page from string extraction and only display link on English header menus.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,5 +1,6 @@
 [ignore: website/calendar/**.html]
 [ignore: website/email-providers/index.html]
+[ignore: website/get-involved/index.html]
 [ignore: website/organizations/index.html]
 [jinja2: website/**.html]
 [jinja2: start-page/release/index.html]
