--- a/babel.cfg
+++ b/babel.cfg
@@ -2,6 +2,7 @@
 [ignore: website/email-providers/index.html]
 [ignore: website/get-involved/index.html]
 [ignore: website/organizations/index.html]
+[ignore: website/contact/index.html]
 [jinja2: website/**.html]
 [jinja2: start-page/release/index.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
