More formatting fixes and add flake8.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-ignore=E121,E123,E124,E126,E127,E128,E402
+ignore=E121,E123,E124,E126,E127,E128,E402,W503
 max-line-length=150
 statistics=True
