Make careers page en-US only and reorg url mappings to be actually alphabetical.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,8 +1,9 @@
 [ignore: website/calendar/**.html]
+[ignore: website/careers/index.html]
+[ignore: website/contact/index.html]
 [ignore: website/email-providers/index.html]
 [ignore: website/get-involved/index.html]
 [ignore: website/organizations/index.html]
-[ignore: website/contact/index.html]
 [jinja2: website/**.html]
 [jinja2: start-page/release/index.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
