Localize main calendar page.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,4 @@
-[ignore: website/calendar/**.html]
+[ignore: website/calendar/holidays/**.html]
 [ignore: website/careers/index.html]
 [ignore: website/contact/index.html]
 [ignore: website/email-providers/index.html]
