--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,10 @@
 #
 # to generate the hashed requirements file used by the production build.
 #
+# You should use python 2.7's pip-compile until we drop support for python
+# 2.7, as python 3's pip-compile will freeze newer version numbers that
+# aren't 2.7-compatible on some packages.
+#
 babel>=2.6.0
 docopt>=0.6.2
 feedparser>=5.2.1
