Start localizing beta start page.

--- a/babel.cfg
+++ b/babel.cfg
@@ -5,4 +5,5 @@
 [ignore: website/organizations/index.html]
 [jinja2: website/**.html]
 [jinja2: start-page/release/index.html]
+[jinja2: start-page/beta/index.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
