--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,7 +19,7 @@ feedparser>=5.2.1
 flake8>=3.7.7
 functools32>=3.2.3.post2; python_version <= '2.7'
 icalendar>=4.0.2
-jinja2>=2.10.1
+jinja2>=2.10.1,<=3.0.3
 markdown>=2.6.11
 markupsafe>=1.0
 polib>=1.1.0
