--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: wip-thunderbird-website
     command: sh -c "/usr/local/bin/python build-site.py --enus --watch-only --docker"
     working_dir: /website
+    profiles:
+      - website
     volumes:
       - ./:/website:ro
       - srv-directory:/srv/www/
@@ -22,9 +24,12 @@ services:
     image: wip-thunderbird-apache
     hostname: www.thunderbird.net
     ports:
+      # We don't need http, but just in case: comment this out to enable it on :8001
+      #- 8001:80
       - 8000:80
+      - 443:443
     volumes:
-      - ./docker/apache/built/tb_extra.conf:/etc/apache2/conf-enabled/tb_extra.conf:ro
+      - ./docker/apache/built/tb_vhosts.conf:/etc/apache2/conf-enabled/tb_vhosts.conf:ro
       - srv-directory:/var/www/html/start/
       # Needed for WSGI rewrites
       - ./settings.py:/var/www/html/start/settings.py:ro
