--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   website-builder:
     image: thunderbird-website-build
-    command: sh -c "/usr/local/bin/python build-site.py --enus --watch-only --docker"
+    command: sh -c "/usr/local/bin/python build-site.py --enus --watch-only --render-path='/srv/www/'"
     working_dir: /website
     profiles:
       - website
@@ -12,7 +12,7 @@ services:
   # Can be started via docker-compose --profile startpage up
   start-builder:
     image: wip-thunderbird-website
-    command: sh -c "/usr/local/bin/python build-site.py --startpage --enus --docker"
+    command: sh -c "/usr/local/bin/python build-site.py --startpage --enus --watch-only --render-path='/srv/www/'"
     working_dir: /website
     profiles:
       - startpage
@@ -24,8 +24,6 @@ services:
     image: thunderbird-website-apache
     hostname: www.thunderbird.net
     ports:
-      # We don't need http, but just in case: comment this out to enable it on :8001
-      #- 8001:80
       - 8000:80
       - 443:443
     volumes:
