--- a/babel.cfg
+++ b/babel.cfg
@@ -7,3 +7,4 @@
 [jinja2: start-page/release/index.html]
 [jinja2: start-page/beta/index.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
+[python: faq.py]
