Fix babel config, and require setuptools as jinja2 won't work without it.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,10 +1,8 @@
-[ignore: website/careers/index.html]
-[ignore: website/contact/index.html]
-[ignore: website/email-providers/index.html]
-[ignore: website/get-involved/index.html]
-[ignore: website/organizations/index.html]
-[jinja2: website/**.html]
-[jinja2: start-page/release/index.html]
-[jinja2: start-page/beta/index.html]
-extensions=jinja2.ext.autoescape,jinja2.ext.with_
-[python: faq.py]
+[ignore: sites/www.thunderbird.net/careers/index.html]
+[ignore: sites/www.thunderbird.net/contact/index.html]
+[ignore: sites/www.thunderbird.net/email-providers/index.html]
+[ignore: sites/www.thunderbird.net/get-involved/index.html]
+[ignore: sites/www.thunderbird.net/organizations/index.html]
+[jinja2: sites/www.thunderbird.net/**.html]
+[jinja2: sites/start.thunderbird.net/release/index.html]
+[jinja2: sites/start.thunderbird.net/beta/index.html]
