Fix some localization issues: * Localize Community and Organization. * Add thunderbird/all as a place that can be localized. * Add back some extensions to babel.cfg to fix macro block localizations.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,8 +1,7 @@
 [ignore: sites/www.thunderbird.net/careers/index.html]
-[ignore: sites/www.thunderbird.net/contact/index.html]
-[ignore: sites/www.thunderbird.net/email-providers/index.html]
-[ignore: sites/www.thunderbird.net/get-involved/index.html]
-[ignore: sites/www.thunderbird.net/organizations/index.html]
 [jinja2: sites/www.thunderbird.net/**.html]
+extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/release/index.html]
+extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/beta/index.html]
+extensions=jinja2.ext.i18n
