Ignore release-notes-feed.html for l10n

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,4 +1,5 @@
 [ignore: sites/www.thunderbird.net/careers/index.html]
+[ignore: sites/www.thunderbird.net/includes/release-notes-feed.html]
 [jinja2: sites/www.thunderbird.net/**.html]
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/release/index.html]
