Adjust babel.cfg to localize start/monthly

--- a/babel.cfg
+++ b/babel.cfg
@@ -4,5 +4,7 @@
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/release/index.html]
 extensions=jinja2.ext.i18n
+[jinja2: sites/start.thunderbird.net/monthly/index.html]
+extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/beta/index.html]
 extensions=jinja2.ext.i18n
