Add a basic template page for future new pages.

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,5 +1,6 @@
 [ignore: sites/www.thunderbird.net/careers/index.html]
 [ignore: sites/www.thunderbird.net/includes/release-notes-feed.html]
+[ignore: sites/www.thunderbird.net/includes/_template/**.html]
 [jinja2: sites/www.thunderbird.net/**.html]
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/release/index.html]
