--- a/babel.cfg
+++ b/babel.cfg
@@ -1,6 +1,7 @@
 [ignore: sites/www.thunderbird.net/careers/index.html]
 [ignore: sites/www.thunderbird.net/includes/release-notes-feed.html]
 [ignore: sites/www.thunderbird.net/includes/_template/**.html]
+[ignore: sites/updates.thunderbird.net/includes/_template/**.html]
 [jinja2: sites/www.thunderbird.net/**.html]
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/release/index.html]
@@ -8,4 +9,6 @@ extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/monthly/index.html]
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/beta/index.html]
+extensions=jinja2.ext.i18n
+[jinja2: sites/updates.thunderbird.net/**.html]
 extensions=jinja2.ext.i18n
