Final tweaks for ESR140 start page. (#844)

--- a/babel.cfg
+++ b/babel.cfg
@@ -10,5 +10,7 @@ extensions=jinja2.ext.i18n
 extensions=jinja2.ext.i18n
 [jinja2: sites/start.thunderbird.net/beta/index.html]
 extensions=jinja2.ext.i18n
+[jinja2: sites/start.thunderbird.net/daily/index.html]
+extensions=jinja2.ext.i18n
 [jinja2: sites/updates.thunderbird.net/**.html]
 extensions=jinja2.ext.i18n
