--- a/.github/workflows/container-test.yml
+++ b/.github/workflows/container-test.yml
@@ -14,41 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Clone required libraries
-        run: |
-          mkdir -p libs
-          git clone --depth 1 https://github.com/thunderbird/thunderbird.net-l10n.git libs/locale
-          git clone --depth 1 -b production https://github.com/mozilla-releng/product-details.git libs/product-details
-          git clone --depth 1 https://github.com/thunderbird/thunderbird-notes.git libs/thunderbird_notes
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install less
-        run: npm install -g less
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-
-      - name: Run tests
-        run: python -m pytest tests/
-
-      - name: Build all sites
-        run: |
-          python build-site.py
-          python build-site.py --startpage
-          python build-site.py --updates
-          python build-site.py --tbpro
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -71,6 +36,10 @@ jobs:
           sleep 5
           # Check container is running
           docker ps | grep tb-web-test
+
+      - name: Run pytest inside container
+        run: |
+          docker exec tb-web-test sh -c "cd /build && /build/venv/bin/python -m pytest tests/"
 
       - name: Test www.thunderbird.net
         run: |
