--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ on:
         options:
           - stage
           - prod
+  repository_dispatch:
+    types: [deploy-stage, deploy-prod]
   # Allow testing from feature branches
   push:
     branches:
@@ -30,9 +32,21 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment || 'stage' }}
+    environment: ${{ github.event.inputs.environment || (github.event.action == 'deploy-prod' && 'prod' || 'stage') }}
 
     steps:
+      - name: Determine environment
+        id: env
+        run: |
+          if [ -n "${{ github.event.inputs.environment }}" ]; then
+            ENV="${{ github.event.inputs.environment }}"
+          elif [ "${{ github.event.action }}" = "deploy-prod" ]; then
+            ENV="prod"
+          else
+            ENV="stage"
+          fi
+          echo "environment=$ENV" >> $GITHUB_OUTPUT
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -57,7 +71,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          BUILD_ENV: ${{ github.event.inputs.environment || 'stage' }}
+          BUILD_ENV: ${{ steps.env.outputs.environment }}
         run: |
           IMAGE_URI="$ECR_REGISTRY/thunderbird-website-$BUILD_ENV:$IMAGE_TAG"
           docker build \
@@ -90,7 +104,7 @@ jobs:
         uses: pulumi/actions@v6
         with:
           command: refresh
-          stack-name: thunderbird/thunderbird-website/${{ github.event.inputs.environment || 'stage' }}
+          stack-name: thunderbird/thunderbird-website/${{ steps.env.outputs.environment }}
           work-dir: ./pulumi
         env:
           IMAGE_URI: ${{ steps.build-image.outputs.image_uri }}
@@ -99,14 +113,14 @@ jobs:
         uses: pulumi/actions@v6
         with:
           command: up
-          stack-name: thunderbird/thunderbird-website/${{ github.event.inputs.environment || 'stage' }}
+          stack-name: thunderbird/thunderbird-website/${{ steps.env.outputs.environment }}
           work-dir: ./pulumi
         env:
           IMAGE_URI: ${{ steps.build-image.outputs.image_uri }}
 
       - name: Update ECS service
         env:
-          BUILD_ENV: ${{ github.event.inputs.environment || 'stage' }}
+          BUILD_ENV: ${{ steps.env.outputs.environment }}
         run: |
           aws ecs update-service \
             --cluster thunderbird-website-$BUILD_ENV \
