Ensure Apache uses https for rewrites when behind ALB. (Fixes #1052)

--- a/docker/conf/ssl.conf
+++ b/docker/conf/ssl.conf
@@ -25,6 +25,10 @@ AddOutputFilterByType DEFLATE application/rss+xml
 AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
 
+# When behind a load balancer with SSL termination, set HTTPS environment variable
+# based on X-Forwarded-Proto header.
+SetEnvIf X-Forwarded-Proto "^https$" HTTPS=on
+
 # SSL Configuration (commented out for container - SSL termination at load balancer)
 # LoadModule ssl_module modules/mod_ssl.so
 # Listen 443
@@ -38,7 +42,10 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # ============================================================================
 # HTTP Virtual Hosts (Port 80)
-# For Fargate deployment, SSL termination happens at the load balancer
+# For Fargate deployment, SSL termination happens at the load balancer.
+# VirtualHosts with relative redirects use "https://" in ServerName so Apache
+# generates correct self-referential URLs. See Apache docs:
+# https://httpd.apache.org/docs/2.4/mod/core.html#servername
 # ============================================================================
 
 # Default virtual host for ALB health checks (must be first)
@@ -55,7 +62,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # live.thunderbird.net
 <VirtualHost *:80>
-  ServerName live.thunderbird.net
+  ServerName https://live.thunderbird.net
   ServerAlias live.mozillamessaging.com live-stage.thunderbird.net
   DocumentRoot /var/www/html/live.momo/htaccess/
 
@@ -71,7 +78,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # autoconfig.thunderbird.net
 <VirtualHost *:80>
-  ServerName autoconfig.thunderbird.net
+  ServerName https://autoconfig.thunderbird.net
   ServerAlias autoconfig-live.mozillamessaging.com autoconfig-stage.thunderbird.net
   DocumentRoot /var/www/html/autoconfig.momo/
 
@@ -96,7 +103,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # broker.thunderbird.net
 <VirtualHost *:80>
-  ServerName broker.thunderbird.net
+  ServerName https://broker.thunderbird.net
   ServerAlias broker-live.mozillamessaging.com broker-stage.thunderbird.net
   DocumentRoot /var/www/services/broker
 
@@ -116,7 +123,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # mx.thunderbird.net
 <VirtualHost *:80>
-  ServerName mx.thunderbird.net
+  ServerName https://mx.thunderbird.net
   ServerAlias mx-live.mozillamessaging.com mx-stage.thunderbird.net
   DocumentRoot /var/www/services/mx
 
@@ -133,7 +140,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # support.thunderbird.net - redirect to support.mozilla.org
 <VirtualHost *:80>
-  ServerName support.thunderbird.net
+  ServerName https://support.thunderbird.net
   ServerAlias support.mozillamessaging.com support-stage.thunderbird.net
 
   RewriteEngine On
@@ -171,7 +178,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # support.live.mozillamessaging.com - legacy redirect
 <VirtualHost *:80>
-  ServerName support.live.mozillamessaging.com
+  ServerName https://support.live.mozillamessaging.com
   ServerAlias support-stage.live.thunderbird.net
 
   ExpiresActive On
@@ -184,7 +191,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # thunderbird.net - redirect to www.thunderbird.net
 <VirtualHost *:80>
-  ServerName thunderbird.net
+  ServerName https://thunderbird.net
   ServerAlias mozillamessaging.com www.mozillamessaging.com getthunderbird.com www.getthunderbird.com
 
   ExpiresActive On
@@ -198,7 +205,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # none.thunderbird.net - redirect to stage
 <VirtualHost *:80>
-  ServerName none.thunderbird.net
+  ServerName https://none.thunderbird.net
 
   ExpiresActive On
   ExpiresDefault "access plus 24 hours"
@@ -211,7 +218,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # www.thunderbird.net - Main website
 <VirtualHost *:80>
-  ServerName www.thunderbird.net
+  ServerName https://www.thunderbird.net
   ServerAlias www-stage.thunderbird.net stage.thunderbird.net www-test.thunderbird.net new.thunderbird.net www-new.thunderbird.net
   DocumentRoot /var/www/html/start/thunderbird.net
 
@@ -268,7 +275,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # start.thunderbird.net
 <VirtualHost *:80>
-  ServerName start.thunderbird.net
+  ServerName https://start.thunderbird.net
   ServerAlias start-stage.thunderbird.net
   DocumentRoot /var/www/html/start/site
 
@@ -291,7 +298,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # updates.thunderbird.net
 <VirtualHost *:80>
-  ServerName updates.thunderbird.net
+  ServerName https://updates.thunderbird.net
   ServerAlias updates-stage.thunderbird.net
   DocumentRoot /var/www/html/start/updates.thunderbird.net
 
@@ -320,7 +327,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # tb.pro
 <VirtualHost *:80>
-  ServerName tb.pro
+  ServerName https://tb.pro
   ServerAlias www.tb.pro www-stage.tb.pro stage.tb.pro
   DocumentRoot /var/www/html/start/tb.pro
 
@@ -351,7 +358,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # mail.thunderbird.net - redirect to fastmail
 <VirtualHost *:80>
-  ServerName mail.thunderbird.net
+  ServerName https://mail.thunderbird.net
 
   ExpiresActive On
   ExpiresDefault "access plus 24 hours"
@@ -363,7 +370,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # stats.thunderbird.net
 <VirtualHost *:80>
-  ServerName stats.thunderbird.net
+  ServerName https://stats.thunderbird.net
   ServerAlias stats-stage.thunderbird.net
   DocumentRoot /var/www/html/tbstats/docs
 
@@ -380,7 +387,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # style.thunderbird.net - redirect to bolt
 <VirtualHost *:80>
-  ServerName style.thunderbird.net
+  ServerName https://style.thunderbird.net
   ServerAlias design.thunderbird.net
 
   ExpiresActive On
@@ -393,7 +400,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # aus.thunderbird.net - redirect to Mozilla AUS
 <VirtualHost *:80>
-  ServerName aus.thunderbird.net
+  ServerName https://aus.thunderbird.net
   ServerAlias aus-stage.thunderbird.net
 
   RewriteEngine On
@@ -405,7 +412,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # addons.thunderbird.net - maintenance page
 <VirtualHost *:80>
-  ServerName addons.thunderbird.net
+  ServerName https://addons.thunderbird.net
   ServerAlias addons-stage.thunderbird.net
   DocumentRoot /var/www/html/start/site/en-US/maintenance
 
@@ -418,7 +425,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # discuss.thunderbird.net - redirect to topicbox
 <VirtualHost *:80>
-  ServerName discuss.thunderbird.net
+  ServerName https://discuss.thunderbird.net
 
   ExpiresActive On
   ExpiresDefault "access plus 24 hours"
@@ -428,7 +435,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # static-test.thunderbird.net
 <VirtualHost *:80>
-  ServerName static-test.thunderbird.net
+  ServerName https://static-test.thunderbird.net
   DocumentRoot /var/www/html/statictest/www/
 
   <Directory "/var/www/html/statictest/www/">
@@ -442,7 +449,7 @@ AddOutputFilterByType DEFLATE application/x-javascript
 
 # give.thunderbird.net - redirect to donate
 <VirtualHost *:80>
-  ServerName give.thunderbird.net
+  ServerName https://give.thunderbird.net
 
   ExpiresActive On
   ExpiresDefault "access plus 24 hours"
@@ -470,12 +477,10 @@ AddOutputFilterByType DEFLATE application/x-javascript
   </Location>
 </VirtualHost>
 
-# Default/catch-all VirtualHost - must be first in file to work properly
-# Redirect to www.thunderbird.net
+# Default/catch-all VirtualHost - redirect unmatched requests to www.thunderbird.net
 <VirtualHost _default_:80>
   ServerName localhost
 
   RewriteEngine On
   RewriteRule .* https://www.thunderbird.net%{REQUEST_URI} [R=302,L]
 </VirtualHost>
-
