Fix wsgi.py, refactor and add tests.

--- a/.github/workflows/container-test.yml
+++ b/.github/workflows/container-test.yml
@@ -31,8 +31,7 @@ jobs:
 
       - name: Start container
         run: |
-          docker run -d --name tb-web-test -p 8080:80 thunderbird-web:test
-          # Wait for container to be healthy
+          docker run -d --name tb-web-test thunderbird-web:test
           for i in $(seq 1 30); do
             status=$(docker inspect -f '{{.State.Health.Status}}' tb-web-test 2>/dev/null)
             [ "$status" = "healthy" ] && break
@@ -40,95 +39,14 @@ jobs:
             sleep 1
           done
 
-      - name: Run pytest inside container
+      - name: Run all tests
         run: |
-          docker exec tb-web-test sh -c "cd /build && /build/venv/bin/python -m pytest tests/"
-
-      - name: Test www.thunderbird.net
-        run: |
-          response=$(curl -sI -H "Host: www.thunderbird.net" http://localhost:8080/en-US/)
-          echo "$response"
-          echo "$response" | grep -q "200 OK"
-
-      - name: Test start.thunderbird.net
-        run: |
-          response=$(curl -sI -H "Host: start.thunderbird.net" http://localhost:8080/)
-          echo "$response"
-          echo "$response" | grep -qE "(200 OK|302 Found)"
-
-      - name: Test updates.thunderbird.net
-        run: |
-          echo "Testing root index (should redirect)..."
-          response=$(curl -sI -H "Host: updates.thunderbird.net" http://localhost:8080/)
-          echo "$response"
-          echo "$response" | grep -qE "(302 Found|200 OK)"
-
-          echo "Testing update snippet page (should redirect)..."
-          response=$(curl -sI -H "Host: updates.thunderbird.net" http://localhost:8080/thunderbird/128.0/dec24/)
-          echo "$response"
-          echo "$response" | grep -qE "302 Found"
-
-          echo "Testing localized update snippet page (should be 200 OK)..."
-          response=$(curl -sI -H "Host: updates.thunderbird.net" http://localhost:8080/en-US/thunderbird/128.0/dec24/)
-          echo "$response"
-          echo "$response" | grep -q "200 OK"
-
-      - name: Test autoconfig.thunderbird.net
-        run: |
-          response=$(curl -sI -H "Host: autoconfig.thunderbird.net" http://localhost:8080/v1.1/gmail.com)
-          echo "$response"
-          echo "$response" | grep -q "200 OK"
-
-      - name: Test stats.thunderbird.net
-        run: |
-          response=$(curl -sI -H "Host: stats.thunderbird.net" http://localhost:8080/)
-          echo "$response"
-          echo "$response" | grep -q "200 OK"
-
-      - name: Test live.thunderbird.net redirects
-        run: |
-          echo "Testing release notes redirect..."
-          response=$(curl -sI -H "Host: live.thunderbird.net" "http://localhost:8080/thunderbird/releasenotes/?locale=en-US&version=128.0&channel=release")
-          echo "$response"
-          echo "$response" | grep -q "302 Found"
-          echo "$response" | grep -q "Location:.*thunderbird.net"
-
-          echo "Testing start page redirect..."
-          response=$(curl -sI -H "Host: live.thunderbird.net" "http://localhost:8080/thunderbird/start/?locale=en-US&version=130.0&channel=release")
-          echo "$response"
-          echo "$response" | grep -q "302 Found"
-
-          echo "Testing whatsnew redirect..."
-          response=$(curl -sI -H "Host: live.thunderbird.net" "http://localhost:8080/thunderbird/whatsnew/?locale=en-US&version=128.0.1&channel=release")
-          echo "$response"
-          echo "$response" | grep -q "302 Found"
-
-          echo "Testing autoconfig redirect..."
-          response=$(curl -sI -H "Host: live.thunderbird.net" "http://localhost:8080/autoconfig/gmail.com")
-          echo "$response"
-          echo "$response" | grep -q "302 Found"
-          echo "$response" | grep -q "Location:.*autoconfig.thunderbird.net"
-
-          echo "Testing addon services redirect..."
-          response=$(curl -sI -H "Host: live.thunderbird.net" "http://localhost:8080/services.addons/test")
-          echo "$response"
-          echo "$response" | grep -q "302 Found"
-
-      - name: Test tb.pro
-        run: |
-          response=$(curl -sI -H "Host: tb.pro" http://localhost:8080/)
-          echo "$response"
-          echo "$response" | grep -qE "(200 OK|302 Found)"
+          docker exec tb-web-test sh -c "cd /build && /build/venv/bin/python -m pytest tests/ -v"
 
       - name: Show container logs on failure
         if: failure()
-        run: |
-          echo "=== Container logs ==="
-          docker logs tb-web-test
-          echo "=== Apache error log ==="
-          docker exec tb-web-test cat /var/log/httpd/error_log || true
+        run: docker logs tb-web-test
 
       - name: Cleanup
         if: always()
         run: docker rm -f tb-web-test || true
-
