Fix waitlist locale redirect

--- a/docker/conf/ssl.conf
+++ b/docker/conf/ssl.conf
@@ -352,6 +352,7 @@ SetEnvIf X-Forwarded-Proto "^https$" HTTPS=on
   WSGIScriptAliasMatch ^/appointment[/]?$ /var/www/html/start/wsgi.py
   WSGIScriptAliasMatch ^/send[/]?$ /var/www/html/start/wsgi.py
   WSGIScriptAliasMatch ^/thundermail[/]?$ /var/www/html/start/wsgi.py
+  WSGIScriptAliasMatch ^/waitlist[/]?$ /var/www/html/start/wsgi.py
   # Bug 1862171
   Header always set X-Frame-Options "DENY"
 </VirtualHost>
